# image_stitcher

./: CMakeLists.txt  package.xml
config/: stitcher.yaml
include/image_stitcher/: image_stitcher.h
launch/: stitcher.launch
src/: image_stitcher.cpp
